2009-01-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Initial upload to TYPO3 Forge
	* Cleanup: Use UNIX line separators in all files