@@ -2,3 +2,4 @@
 
 	* Initial upload to TYPO3 Forge
 	* Cleanup: Use UNIX line separators in all files
+	* Fix for current TYPO3 trunk (4.3-dev) caching
